10) Speedup test: enable parallelization + jvm options